# reelpy

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
reelpy/: __init__.py  config.py  exceptions.py
reelpy/clip/: base.py  synthetic.py  video.py
reelpy/effects/: base.py  color.py  fades.py
reelpy/io/: reader.py  writer.py
tests/: conftest.py  test_clip.py  test_effects.py  test_io.py
